Networking/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-approved
  labels:
    approved: "true"
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sh", "-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: curl-non-approved
  labels:
    approved: "false"
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sh", "-c", "sleep 3600"]
