Networking/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-newtorking-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: networking-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: networking-app
    spec:
      containers:
      # Change your account id
      - image: 694448341573.dkr.ecr.ap-northeast-2.amazonaws.com/networking-app:latest
        imagePullPolicy: Always
        name: networking-app
        ports:
        - name: fastapi
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-networking-app
  labels:
    app.kubernetes.io/name: networking-app
spec:
  ports:
    - name: fastapi
      port: 8000
  type: ClusterIP
  selector:
    app.kubernetes.io/name: networking-app
